--- a/labs/LectureNotes.ipynb
+++ b/labs/LectureNotes.ipynb
@@ -1883,7 +1883,63 @@
    "metadata": {},
    "source": [
     "**RESTful example**\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](attachment:image.png)<br> <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CURL \n",
+    "is a command-line tool used to transfer data with URLs. It supports various protocols like HTTP, HTTPS, FTP, and is commonly used for downloading files, testing APIs, and automating web-related tasks.<br>\n",
+    "*Some common use cases of CURL include:*\n",
+    "+ Downloading files from the internet.\n",
+    "+ Testing API endpoints by making HTTP requests.\n",
+    "+ Uploading files to a server.\n",
+    "+ Checking website availability and performance.\n",
+    "+ Automating tasks involving web services and APIs.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Topic 4 <br> writing a modules to interact with API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Modules\n",
+    "**requests** is a popular Python library for making HTTP requests.\n",
+    "It simplifies interactions with web services and fetching data from URLs.\n",
+    "Key features include handling authentication, sessions, and automatic content decoding.\n",
+    "Install it via pip: python -m pip install requests.\n",
+    "Detailed documentation is available on Read the Docs.\n",
+    "In summary, requests makes HTTP communication in Python easy and efficient. 🌐🐍\n",
+    "\n",
+    "**urllib.parse** The urlparse() function splits a URL string into its components.\n",
+    "It returns a 6-item named tuple representing the general structure of a URL: scheme://netloc/path;parameters?query#fragment.\n",
+    "Components include scheme, network location (netloc), path, parameters, query, and fragment.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.parse\n",
+    "query = 'Hellö Wörld@Python'\n",
+    "parsed =  urllib.parse.quote(query)\n",
+    "print(parsed)\n",
+    "#'Hell%C3%B6%20W%C3%B6rld%40Python'\n",
+    "\n",
+    "params = {'q': 'Python URL encoding', 'as_sitesearch': 'www.urlencoder.io'}\n",
+    "parsedparams = urllib.parse.urlencode(params)\n",
+    "print(parsedparams)\n",
+    "#'q=Python+URL+encoding&as_sitesearch=www.urlencoder.io'"
    ]
   }
  ],
