--- a/labs/LectureNotes.ipynb
+++ b/labs/LectureNotes.ipynb
@@ -3002,30 +3002,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# getting data from CSO.ie with 4 dimensions - population stats\n",
-    "# https://ws.cso.ie/public/api.restful/PxStat.Data.Cube_API.ReadDataset/FP001/JSON-stat/2.0/en\n",
-    "# actual file is in csodao.py\n",
-    "\n",
     "import requests\n",
     "import json\n",
     "\n",
-    "urlBeginning=\"https://ws.cso.ie/public/api.restful/PxStat.Data.Cube_API.ReadDataset/\"\n",
-    "urlEnd=\"/JSON-stat/2.0/en\"\n",
+    "# Base URL for CSO API\n",
+    "urlBeginning = \"https://ws.cso.ie/public/api.restful/PxStat.Data.Cube_API.ReadDataset/\"\n",
+    "urlEnd = \"/JSON-stat/2.0/en\"\n",
     "\n",
-    "# first step - get response (for later to be wrintten into file)\n",
     "def getAll(dataset):\n",
-    "    url= urlBeginning+dataset+urlEnd\n",
+    "#Fetches data from the CSO API for the specified dataset.\n",
+    "#    Parameters: - dataset (str): The identifier for the dataset to retrieve.\n",
+    "#    Returns: - JSON object containing the response data.\n",
+    "    url = urlBeginning + dataset + urlEnd\n",
     "    response = requests.get(url)\n",
     "    return response.json()\n",
     "\n",
-    "# get response and write it straight into a json file.\n",
     "def getAllAsFile(dataset):\n",
-    "    url= urlBeginning+dataset+urlEnd\n",
+    "#    Fetches data from the CSO API for the specified dataset and writes it to a JSON file.\n",
+    "#    Parameters: - dataset (str): The identifier for the dataset to retrieve.\n",
+    "    url = urlBeginning + dataset + urlEnd\n",
     "    with open(\"cso.json\", \"wt\") as fp:\n",
-    "        print(json.dumps(getAll(\"FP001\")), file = fp)\n",
+    "        print(json.dumps(getAll(dataset)), file=fp)\n",
+    "\n",
+    "def getFormatted(dataset):\n",
+    "#    Formats the retrieved data from the CSO API into a nested dictionary structure.\n",
+    "#    Parameters:   - dataset (str): The identifier for the dataset to retrieve.\n",
+    "#    Returns: - A nested dictionary containing the formatted data.\n",
+    "    data = getAll(dataset)\n",
+    "    ids = data[\"id\"]\n",
+    "    values = data[\"value\"]\n",
+    "    dimensions = data[\"dimension\"]\n",
+    "    sizes = data[\"size\"]\n",
+    "    valuecount = 0\n",
+    "    result = {}\n",
+    "\n",
+    "    # Unpacking JSON with for loops\n",
+    "    # Unpack 1st dimension STATISTIC\n",
+    "    for dim0 in range(0, sizes[0]):\n",
+    "        currentId = ids[0]\n",
+    "        index = dimensions[currentId][\"category\"][\"index\"][dim0]\n",
+    "        label0 = dimensions[currentId][\"category\"][\"label\"][index]\n",
+    "        result[label0] = {}\n",
+    "        # Unpack 2nd dimension TLIST(A1)\n",
+    "        for dim1 in range(0, sizes[1]):\n",
+    "            currentId = ids[1]\n",
+    "            index = dimensions[currentId][\"category\"][\"index\"][dim1]\n",
+    "            label1 = dimensions[currentId][\"category\"][\"label\"][index]\n",
+    "            result[label0][label1] = {}\n",
+    "\n",
+    "            # Unpack 3rd dimension C02199V02655\n",
+    "            for dim2 in range(0, sizes[2]):\n",
+    "                currentId = ids[2]\n",
+    "                index = dimensions[currentId][\"category\"][\"index\"][dim2]\n",
+    "                label2 = dimensions[currentId][\"category\"][\"label\"][index]\n",
+    "                result[label0][label1][label2] = {}\n",
+    "                # Unpack 4th dimension C02199V02655\n",
+    "                for dim3 in range(0, sizes[3]):\n",
+    "                    currentId = ids[3]\n",
+    "                    index = dimensions[currentId][\"category\"][\"index\"][dim3]\n",
+    "                    label3 = dimensions[currentId][\"category\"][\"label\"][index]\n",
+    "                    result[label0][label1][label2][label3] = values[valuecount]\n",
+    "                    valuecount += 1\n",
+    "    return result\n",
+    "\n",
+    "def getFormattedAsFile(dataset):\n",
+    "#    Fetches data from the CSO API for the specified dataset, formats it, and writes it to a JSON file.\n",
+    "#    Parameters:  - dataset (str): The identifier for the dataset to retrieve.   \n",
+    "    with open(\"cso-formatted.json\", \"wt\") as fp:\n",
+    "        print(json.dumps(getFormatted(dataset)), file=fp)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    getAllAsFile(\"FP001\")\n",
+    "    # Example usage\n",
+    "    # getAllAsFile(\"FP001\")\n",
+    "    getFormattedAsFile(\"FP001\")\n",
+    "\n",
     "\n",
     "\n"
    ]
